# rust-playground

./: README.md
license-web/: Cargo.toml  makefile
license-web/src/: encrypt.rs  main.rs
license-web/testcbind/: Cargo.toml  my_header.hpp
license-web/testcbind/src/: lib.rs
localtest/: Cargo.toml
localtest/src/: main.rs
